--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>This is a 2nd Git Project</h1>
+    <h2>This is a 2nd header</h2>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quia natus. Sequi.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure, quia natus. Sequi.</p>
